# SIMD-Art

./: .gitignore  CMakeLists.txt  Field.cpp  Field.h  GUI.cpp  GUI.h  Memory.cpp  Memory.h  Particle.cpp  Particle.h  README.md  Simd.h  TimeIt.cpp  TimeIt.h  Utils.cpp  Utils.h  main.cpp  test.cpp
cmake_modules/: FindEigen3.cmake  FindFMT.cmake  FindSpdlog.cmake  FindTGUI.cmake
include/simdart/: Exception.h  FPS.h  Field.h  GUI.h  SIMD.h  Simd.h  TimeIt.h  Utils.h
src/: CMakeLists.txt  Exception.cpp  FPS.cpp  Field.cpp  GUI.cpp  Timeit.cpp
tests/: CMakeLists.txt  TestExample.cpp  TestExample.h  TestSuite.cpp
